# dualquat

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/dualquat/: dualquat.h  dualquat_base.h  dualquat_common.h  dualquat_exponential.h  dualquat_helper.h  dualquat_query.h  dualquat_relational.h  dualquat_transformation.h  quat_exponential.h  quat_relational.h  relational.h
test/: CMakeLists.txt  gtest_helper.cpp  gtest_helper.h  test_dualquat_base.cpp  test_dualquat_common.cpp  test_dualquat_exponential.cpp  test_dualquat_helper.cpp  test_dualquat_query.cpp  test_dualquat_relational.cpp  test_dualquat_transformation.cpp  test_quat_exponential.cpp  test_quat_relational.cpp  test_relational.cpp
